--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>로또 번호 분석 시스템 - 엔트로피 가중치법</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
@@ -141,6 +144,19 @@
                         <label for="backtest-topn">예측 번호 개수</label>
                         <input type="number" id="backtest-topn" value="10" min="6" max="20">
                     </div>
+                    <div class="control-group">
+                        <label for="backtest-method">분석 방법</label>
+                        <select id="backtest-method" title="백테스트에 사용할 분석 방법을 선택하세요.">
+                            <option value="entropy">엔트로피 가중치법 (Entropy)</option>
+                            <option value="topsis">TOPSIS 방법</option>
+                            <option value="randomForest">Random Forest</option>
+                            <option value="association">연관 규칙 분석</option>
+                            <option value="ensemble">앙상블 (엔트로피 + TOPSIS)</option>
+                        </select>
+                        <small style="color: #64748b; font-size: 0.8rem;">
+                            각 방법의 성능을 비교해보세요.
+                        </small>
+                    </div>
                     <button class="btn btn-success" onclick="runBacktest()">
                         ▶️ 백테스트 실행
                     </button>
@@ -180,7 +196,7 @@
                 <div class="card-header">
                     <h2 class="card-title">상세 결과</h2>
                 </div>
-                <div style="overflow-x: auto;">
+                <div class="table-wrapper">
                     <table class="backtest-table" id="backtest-table">
                         <thead>
                             <tr>
